feat: add secret management
